--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,17 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-
+.gitignore
+.flowconfig
+.buckconfig
+.eslintrc.js
+.prettierrc.js
+.ruby-version
+.watchmanconfig
+__tests__
+.bundle
+.idea
+.vscode
 # BUCK
 buck-out/
 \.buckd/
